fixed images on mobile

--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -308,6 +308,7 @@
         margin: 0 0 (_size(element-margin) * 0.5) 0 !important;
         max-width: 85%;
         width: 12em;
+        height: 12em;
       }
     }
   }
